# V26MAT102

./: .gitignore  README.md  flake.nix  pyproject.toml
notebooks/oblig3/: Lagrange.ipynb  gradienteuler.ipynb  kari_analyse.ipynb  ola_analyse.ipynb  oslobergen.ipynb
notebooks/uke10/: Uke10Oppgaver.ipynb  uke10.ipynb
notebooks/uke11/: 121funksjoneravnvariable.ipynb  126kurver.ipynb  12deriverte_a.ipynb  12derivertevektorfunksjoner.ipynb  OppgaverUke10.ipynb  OppgaverUke11.ipynb  Uke10Oppgaver.ipynb  Uke11.ipynb  gradient_og_retningsderiverte.ipynb  kjerneregelen.ipynb  lagrange_metoden.ipynb  lineærRegresjon.ipynb  snip.ipynb  vektorfunksjoner.ipynb
notebooks/uke12/: Uke12.ipynb  Uke12_oppgaver.ipynb  kjerneregelen.ipynb
notebooks/uke13/: Regresjon_temperaturer.ipynb  Uke13.ipynb  Uke13Oppgaver.ipynb  Variasjoner_temperatur.ipynb  regresjonslinje_L.npy
notebooks/uke14/: lagrange_metoden.ipynb
notebooks/uke15/: Variasjoner_temperatur.ipynb  enkel_lagrange.ipynb  hypotesetest.ipynb  lagrange_forklaring.ipynb  lagrange_metoden.ipynb  paretetemperaturer.ipynb  testhelding.ipynb  to_utvalgs_t_test.ipynb  uke15.ipynb
notebooks/uke16/: testheldning.ipynb  testheldning_ikkelineær.ipynb  uke16.ipynb
notebooks/uke17/: difflign.ipynb  eigenvektorer_python.ipynb  eigenverdier.ipynb  eulersmetode.ipynb  gradient.ipynb  matrisereduksjon.ipynb  parethint.ipynb  paretttest.ipynb  toutvalghint.ipynb  toutvalgttest.ipynb  uke17.ipynb
notebooks/uke3/: K1_dataanalyse.ipynb  K1_enkle_beregninger.ipynb  (+10 more)
uke3/: K1_grunnleggende_python.ipynb  k1_1.json  k1_2.json  k2_1.json
(+68 files in other folders)
